tests/fail-dep/genmc/weak_memory/weak_uninit.stderr
error: Undefined Behavior: TODO GENMC: checkForRaces failed
  --> tests/fail-dep/genmc/weak_memory/weak_uninit.rs:LL:CC
   |
LL |         x.load(Ordering::Relaxed);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^ TODO GENMC: checkForRaces failed
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: BACKTRACE on thread `unnamed-ID`:
   = note: inside `thread_2` at tests/fail-dep/genmc/weak_memory/weak_uninit.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to 1 previous error

